--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>index</h1>
+    <div class="topcontent">
+        <img src="/img/gifts.svg" width="50%">
+        <h1 class="title is-1">It's party time</h1>
+        <p>
+            <a class="button is-primary is-inverted is-outlined is-large" href="/start">Get Started</a>
+        </p>
+    </div>
 {% endblock %}
