add utils to generate combination

--- a/templates/start.html
+++ b/templates/start.html
@@ -7,9 +7,10 @@
             <div class="columns">
                 <div class="column is-half is-offset-one-quarter">
                     <div class="field">
-                        <label class="label">list of people</label>
+                        <label class="label">list of people, input a name per a line</label>
                         <p class="control">
                     <textarea class="textarea is-large"
+                              name="attendee_list"
                               placeholder="input name, one name per line"></textarea>
                         </p>
                     </div>
