--- a/templates/generated.html
+++ b/templates/generated.html
@@ -9,6 +9,10 @@
 <body>
 <div class="reveal">
     <div class="slides">
+        <section data-background-color="#04C4D9">
+            <h1 onclick="javascript:Reveal.next();">START</h1>
+            <h3 onclick="javascript:history.back();">Back</h3>
+        </section>
         {% for c in event.attendee_combination %}
         <section
         {% if loop.index % 5 == 0 %}
@@ -26,9 +30,9 @@
         {% endif %}
                 >
             <h1>No.{{ loop.index }}</h1>
-            <h2><span style="font-size: 60%">from:&nbsp;</span>{{ c.from }}</h2>
+            <h2 class="fragment"><span style="font-size: 60%">from:&nbsp;</span>{{ c.from }}</h2>
             <h3>&rArr;</h3>
-            <h2><span style="font-size: 60%">to:&nbsp;</span>{{ c.to }}</h2>
+            <h2 class="fragment"><span style="font-size: 60%">to:&nbsp;</span>{{ c.to }}</h2>
         </section>
         {% endfor %}
     </div>
@@ -36,6 +40,11 @@
 <script src="/js/reveal.js"></script>
 <script>
     Reveal.initialize();
+    Reveal.configure({
+        keyboard: {
+            13: 'next'
+        }
+    });
 </script>
 </body>
 </html>
