--- a/templates/generated.html
+++ b/templates/generated.html
@@ -29,10 +29,11 @@
             data-background-color="#04C4D9"
         {% endif %}
                 >
-            <h1>No.{{ loop.index }}</h1>
+            <h1>No.{{ loop.index }} {% if loop.last %}(last){% endif %}</h1>
             <h2 class="fragment"><span style="font-size: 60%">from:&nbsp;</span>{{ c.from }}</h2>
             <h3>&rArr;</h3>
             <h2 class="fragment"><span style="font-size: 60%">to:&nbsp;</span>{{ c.to }}</h2>
+        {% if loop.last %}<h3 onclick="javascript:location.href='/result/{{ event.key.urlsafe() }}'">see all results</h3>{% endif %}
         </section>
         {% endfor %}
     </div>
