add history data

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,9 @@
         <a class="nav-item" href="/">
             Home
         </a>
+        <a class="nav-item" href="/history">
+            History
+        </a>
         <a class="nav-item" href="https://github.com/yosukesuzuki/gift-exchange-webapp">
             Github
         </a>
