--- a/templates/generated.html
+++ b/templates/generated.html
@@ -3,15 +3,15 @@
     <link rel="stylesheet" href="/css/reveal.css">
     <link rel="stylesheet" href="/css/theme/black.css">
     <style>
-
     </style>
 </head>
 <body>
 <div class="reveal">
     <div class="slides">
         <section data-background-color="#04C4D9">
+            <div style="width:80%;margin:auto;padding-bottom: 7vh">{{ event.attendee_list|join(',')|safe }} will join. <br/>Are you ready?</div>
             <h1 onclick="javascript:Reveal.next();">START</h1>
-            <h3 onclick="javascript:history.back();">Back</h3>
+            <h3 onclick="javascript:history.back();">&#x21BA;Back</h3>
         </section>
         {% for c in event.attendee_combination %}
         <section
