fix top page issue

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
     .card {
         background: #04c4d9;
     }
+    .card.marketing {
+        margin-top: 1em;
+    }
 
     .topcontent, .inputpeople {
         margin: auto;
@@ -31,6 +34,11 @@
         color: #fff;
         font-weight: 800;
         margin-top: 0.2em;
+    }
+
+    .topcontent h2 {
+        margin-left:1em;
+        margin-right:1em;
     }
 
     .inputpeople h1, .inputpeople h2 {
@@ -56,7 +64,7 @@
     }
     @media (min-width: 724px) {
         .topcontent, .inputpeople {
-            height: 70vh;
+            min-height: 75vh;
             margin-top: 10vh;
         }
     }
