--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,27 @@
             <a class="button is-primary is-inverted is-outlined is-large" href="/start">Get Started</a>
         </p>
     </div>
-
+    <div class="card marketing">
+        <div class="card-content">
+            <div class="media">
+                <div class="media-content">
+                    <p class="title is-4">Exchange Gift at a party</p>
+                </div>
+            </div>
+            <div class="content">
+                Xmas party, birthday party, events... Let's do gift exchange.
+                This app help to make a combination.
+            </div>
+        </div>
+        <div class="card-content">
+            <div class="media">
+                <div class="media-content">
+                    <p class="title is-4">Share the results</p>
+                </div>
+            </div>
+            <div class="content">
+                Finally,this app will output the exchange results as markdown text format. You can easily share it directly on this service or on Facebook, Twitter and so on.
+            </div>
+        </div>
+    </div>
 {% endblock %}
