--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <div class="topcontent">
         <img src="/img/gifts.svg" width="50%">
         <h1 class="title is-1">It's party time</h1>
-        <h2>By this app, you can make a gift exchange combination</h2>
+        <h2>You can make gift exchange matching</h2>
         <p>
             <a class="button is-primary is-inverted is-outlined is-large" href="/start">Get Started</a>
         </p>
@@ -16,8 +16,8 @@
                 </div>
             </div>
             <div class="content">
-                Xmas party, birthday party, events... Let's do gift exchange.
-                This app help to make a combination.
+                Birthday party, events... Let's do gift exchange.
+                This app help you to make matching.
             </div>
         </div>
         <div class="card-content">
